Make sure hand is not cropped in web view

--- a/src/index.css
+++ b/src/index.css
@@ -309,7 +309,7 @@ img.donate {
 }
 
 #content4 {
-    height: 42em;
+    height: 55em;
     overflow-y: hidden;
     padding: 2em 2em 0 2em;
 }
